<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/tool_bar"
        app:title="@string/toolbar_name"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginBottom="@dimen/central_pad"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/line1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:background="@drawable/button"
                    android:text="@string/button"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/central_pad"
                android:layout_marginBottom="@dimen/central_pad"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/line2"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/central_pad"
                android:layout_marginBottom="@dimen/central_pad"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/line3"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:background="@color/row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/central_pad"
                android:layout_marginBottom="@dimen/central_pad"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/line4"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/row" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/central_pad"
                android:layout_marginBottom="@dimen/central_pad"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/line5"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vidpovid"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/row" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/central_pad"
                android:layout_marginBottom="@dimen/padding"
                android:text="@string/central_text"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="270dp"
                    android:layout_marginEnd="@dimen/padding"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cat1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="270dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cat2" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
